style.css
/*
Color Palette
Steel Blue 4F7CAC
Powder Blue C0E0DE
Dark Jungle Green 162521
Charcoal 3C474B
Middle Blue Green 9EEFE5
*/

/*************Global Styles*************************/
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  color: #353535;
  margin: 0;
  font-family: "Yusei Magic", sans-serif;
  font-size: 15px;
  line-height: 1.5;
}

img {
  width: 200px;
}

h1 {
  font-size: 50px;
}

h2 h3 {
  font-size: 35px;
}

h1,
h2 {
  margin: 0;
}

h3 {
  margin-bottom: 0;
}

header {
  padding: 15px;
}
header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex;
  padding-left: 0;
  list-style: none;
}

header nav ul li a {
  color: #fff;
  font-size: 20px;
  text-decoration: none;
  margin: 0 20px 0 0;
}

header nav ul li:last-child a {
  margin-right: 0;
}

footer h3 {
  margin-top: 0;
  padding: 30px;
}
/* class for dark background */
.black-background {
  background-color: #000;
  color: #ffffff;
}

/* class for medium background */
.green-background {
  background-color: #9eefe5;
  color: #ffffff;
}

/* class for light background */
.blue-background {
  background-color: #4f7cac;
  color: #ffffff;
}

/* content wrap */
.content-wrap {
  max-width: 800px;
  width: 85%;
  margin: 0 auto;
  padding: 40px 0;
}

/*Projects */

.projects .btn {
  color: #d9d9d9;
  background: #000;
  text-decoration: none;
  padding: 8px;
  border-radius: 5px;
}

.project-item {
  overflow: hidden;
  border-bottom: 2px solid #000;
  padding: 25px 0;
}

.projects h2 {
  font-size: 30px;
}

.project-item img {
  margin-top: 0;
}

.project-item h3 {
  font-size: 24px;
}

/*Contact Info*/

.contact-list {
  list-style-type: none;
  padding: 0;
}

.contact-list a {
  color: #fff;
  padding: 5px;
  display: inline-block;
}

/* form settings */
form label {
  display: block;
  font-size: 18px;
  margin-bottom: 5px;
  color: white;
  font-family: Arial;
}

form input[type="text"] {
  color: #000;
  font-size: 20px;
  margin-bottom: 20px;
  width: 98%;
}

form textarea {
  color: #000;
  font-size: 20px;
  margin-bottom: 20px;
  width: 98%;
  height: 4.75rem;
}

form button {
  padding: 10px 16px;
  background-color: #000;
  color: white;
  border: 0;
  border-radius: 10px;
  font-family: tahoma;
}

legend {
  background-color: #000;
  color: white;
  padding: 8px 10px;
  border-radius: 6px;
}

fieldset {
  max-width: 600px;
  min-width: 250px;
  padding: 10px 12px;
  border-radius: 6px;
  border-style: solid;
}

/* this makes the google map responsive */
.map-responsive {
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
  height: 0;
}
/* this makes the google map fit the width of page */
.map-responsive iframe {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
}

@media all and (min-width: 600px) {
  h2 h3 {
    margin: 0;
    font-size: 30px;
  }

  img {
    width: 200px;
  }

  .flex-container {
    flex-direction: row;
  }

  .project-item img {
    float: left;
    margin-right: 15px;
  }

  .contact-list {
    display: flex;
    justify-content: center;
  }
  .contact-list a {
    justify-content: center;
  }

  header {
    display: flex;
    justify-content: space-between;
    padding: 15px;
  }

  header h1 {
    margin: 14px 0;
    padding-top: 0;
  }
  header nav {
    margin-top: 8px;
  }

  header nav ul li a:hover {
    color: #bdbdbd;
  }
}

